--- a/Server/appsettings.json
+++ b/Server/appsettings.json
@@ -14,5 +14,10 @@
     "Port": 587,
     "SenderEmail": "tahiryrazanamara@gmail.com",
     "SenderPassword": "xmzeqoqlwvtiuhwb"
+  },
+  "Jwt": {
+    "Key": "tionreserve_sharp_c_train_api_netdot_core_eight",
+    "Issuer": "http://localhost:5193",
+    "Audience": "http://localhost:5173"
   }
 }
